--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "string_view": "c",
         "shared_mutex": "c",
         "functional": "c",
-        "regex": "c"
+        "regex": "c",
+        "cctype": "c"
     }
 }
